sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2: error: not found: value bubbleSort2
		bubbleSort2();
                ^AlgBubbleSort2:4: error: not found: value depart
    traverse(depart)
             ^